browser/themes/shared/controlcenter/panel.css
/* ... */
#protections-popup[milestone="50000"] #protections-popup-milestones-illustration {
  fill: #ff298a;
  stroke: #e31587;
}

#protections-popup[milestone="100000"] #protections-popup-milestones-illustration {
  fill: #ffa436;
  stroke: #e27f2e;
}

#protections-popup[milestone="500000"] #protections-popup-milestones-illustration {
  fill: #ffd567;
  stroke: #ffbd4f;
}

.permission-popup-section {
  padding-bottom: 12px;
}

#permission-popup-menulist {
  padding-inline: 12px 6px;
  margin: 0;

  &,
  > menupopup {
    min-width: 6.5em;
  }
}

.protections-popup-section-header,
.protections-popup-switch-section-header {
  padding: var(--arrowpanel-menuitem-padding);
  margin: var(--arrowpanel-menuitem-margin);
}

.identity-popup-expander:focus-visible,
.permission-popup-permission-remove-button:focus-visible {
  outline: var(--focus-outline);
}

@media (-moz-platform: linux) {
  .identity-popup-expander > .button-box,
  .permission-popup-permission-remove-button > .button-box {
    appearance: none;
  }
}

#blocked-popup-indicator-item,
#geo-access-indicator-item {
  margin-top: -2px;
  margin-inline-start: 16px;
}

#blocked-popup-indicator-item,
#blocked-popup-indicator-item > label {
  display: block;
}

#geo-access-indicator-item {
  font-size: 0.8em;
  color: var(--text-color-deemphasized);
}

/** Shim-allow warning and indicator icons **/

.protections-popup-shim-allow-hint {
  padding: 0 2em;
  margin-block-end: 10px;
}

.protections-popup-shim-allow-hint-icon,
.protections-popup-list-host-shim-allow-indicator {
  -moz-context-properties: fill;
  background-image: url("chrome://global/skin/icons/info-filled.svg");
  background-repeat: no-repeat;
  background-position: center;

  fill: light-dark(#0090ed, #80ebff);
}

.protections-popup-shim-allow-hint-icon {
  width: 24px;
  height: 24px;

  background-size: contain;
  margin-inline-end: 0.5em;
}

.protections-popup-list-host-shim-allow-indicator {
  width: 16px;
}

.protections-popup-shim-allow-hint-icon {
  margin-inline-end: 0.5em;
}

.protections-popup-list-host-shim-allow-indicator {
  margin-inline-start: 0.5em;
  min-width: 16px;
}

#cookieBannerView-disable-site,
#cookieBannerView-enable-site {
  font-weight: 600;
}

.protections-popup-cookieBannerView-footer {
  margin-top: auto;
}

/* Cookie banner state toggles for the popup menu item */

#protections-popup-cookie-banner-section:not([data-state="detected"]) description#protections-popup-cookie-banner-detected,
#protections-popup-cookie-banner-section:not([data-state="undetected"]) description#protections-popup-cookie-banner-undetected,
#protections-popup-cookie-banner-section:not([data-state="site-disabled"]) description#protections-popup-cookie-banner-site-disabled {
  display: none;
}

/* Cookie banner state toggles for the subview: if the state is detected, show
 * the disable controls; if the state is site-disabled, show the enable controls. */
#protections-popup-cookieBannerView:not([data-state="detected"]) #protections-popup-cookieBannerView-disable-button,
#protections-popup-cookieBannerView:not([data-state="detected"]) description#cookieBannerView-disable-site,
#protections-popup-cookieBannerView:not([data-state="detected"]) description#cookieBannerView-disable-site-warning,
#protections-popup-cookieBannerView:not([data-state="site-disabled"]) #protections-popup-cookieBannerView-enable-button,
#protections-popup-cookieBannerView:not([data-state="site-disabled"]) description#cookieBannerView-enable-site,
#protections-popup-cookieBannerView:not([data-state="site-disabled"]) description#cookieBannerView-enable-site-description {
  display: none;
}

.protections-popup-smartblock-section {
  background-color: var(--background-color-information);
  border-radius: var(--border-radius-small);
  margin-inline: var(--arrowpanel-menuitem-margin-inline);
  margin-block-start: var(--space-small);
  padding-block: var(--space-small);
}

.protections-popup-smartblock-toggle-box {
  margin-inline: var(--arrowpanel-menuitem-margin-inline);
  padding-inline: var(--arrowpanel-menuitem-padding-inline);
}

.protections-popup-smartblock-toggle-box > moz-toggle {
  padding-block-end: var(--arrowpanel-menuitem-padding-block);
}

/* Trustpanel popup */

#trustpanel-header-row {
  justify-content: space-between;
  padding-block-start: var(--space-small);
  padding-inline-start: var(--space-large);
}

#trustpanel-popup-host {
  align-self: center;
  white-space: nowrap;
}

#trustpanel-graphic-section {
  margin: var(--space-small) var(--space-large);
  padding: var(--space-large);
  padding-block-start: var(--space-small);
  border-radius: var(--border-radius-medium);
  flex-direction: column;
}

.only-trustpanel {
  visibility: hidden;

  #trustpanel-popup & {
    visibility: visible;
  }
}

#trustpanel-popup {
  &[tracking-protection="warning"] {
    #trustpanel-graphic-image {
      background-image: url(chrome://browser/skin/trustpanel-graphic-warning.svg);
    }
    #trustpanel-graphic-section {
      background: var(--trustpanel-warning-bg);
    }
  }
  &[tracking-protection="enabled"] {
    #trustpanel-graphic-image {
      background-image: url(chrome://browser/skin/trustpanel-graphic-enabled.svg);
    }
    #trustpanel-graphic-section {
      background: var(--trustpanel-highlight-bg);
    }
  }

  &[tracking-protection="disabled"] {
    #trustpanel-graphic-image {
      background-image: url(chrome://browser/skin/trustpanel-graphic-disabled.svg);
    }
    #trustpanel-graphic-section {
      background: var(--trustpanel-graphic-bg);
    }
  }
}

#trustpanel-graphic-image {
  -moz-context-properties: fill;
  background-repeat: no-repeat;
  background-position: center;
  fill: light-dark(#0090ed, #80ebff);
  width: 80px;
  height: 80px;
  background-size: contain;
  margin-inline-end: var(--space-small);
}

#trustpanel-graphic-section-text {
  align-self: center;
  margin-inline-start: var(--space-medium);
}
/* ... */

